--- a/docs/templates/base.html
+++ b/docs/templates/base.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1" />
         <title>Hermit C2</title>
+        <link rel="icon" href="/favicon.ico">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -12,7 +13,10 @@
 
     <body>
         <header>
-            <a href="/" id="title">Hermit</a>
+            <a href="/" id="title">
+                <img src="/icon.png" alt="icon" class="icon" />
+                Hermit
+            </a>
             <nav>
                 <!-- <a href="/about">About</a> -->
                 <a href="/docs/overview">Docs</a>
