--- a/docs/templates/doc.html
+++ b/docs/templates/doc.html
@@ -45,5 +45,16 @@
             {% endif %}
         </div>
     </div>
+
+    <!-- Pages for hamburger menu -->
+    <div class="pages_for_hamburger">
+        <a href="{{ get_url(path='@/docs/overview.md') }}">Overview</a>
+        <a href="{{ get_url(path='@/docs/getting-started.md') }}">Gettint Started</a>
+        <a href="{{ get_url(path='@/docs/prerequisites.md') }}">Prerequisites</a>
+        <a href="{{ get_url(path='@/docs/installation.md') }}">Installation</a>
+        <hr />
+        <a href="{{ get_url(path='@/docs/c2-server.md') }}">C2 Server</a>
+        <a href="{{ get_url(path='@/docs/c2-client.md') }}">C2 Client</a>
+    </div>
 </div>
 {% endblock content %}
