add some method for the agent task

--- a/docs/templates/base.html
+++ b/docs/templates/base.html
@@ -15,7 +15,7 @@
         <header>
             <a href="/" id="title">
                 <img src="/icon.png" alt="icon" class="icon" />
-                Hermit
+                Hermit C2
             </a>
             <nav>
                 <!-- <a href="/about">About</a> -->
