fix shellcode injection problem

--- a/docs/templates/doc.html
+++ b/docs/templates/doc.html
@@ -5,12 +5,14 @@
     <div class="pages">
         <div class="wrapper">
             <a href="{{ get_url(path='@/docs/overview.md') }}">Overview</a>
-            <a href="{{ get_url(path='@/docs/getting-started.md') }}">Gettint Started</a>
             <a href="{{ get_url(path='@/docs/prerequisites.md') }}">Prerequisites</a>
             <a href="{{ get_url(path='@/docs/installation.md') }}">Installation</a>
             <hr />
             <a href="{{ get_url(path='@/docs/c2-server.md') }}">C2 Server</a>
             <a href="{{ get_url(path='@/docs/c2-client.md') }}">C2 Client</a>
+            <a href="{{ get_url(path='@/docs/listener.md') }}">Listener</a>
+            <a href="{{ get_url(path='@/docs/implant.md') }}">Implant</a>
+            <a href="{{ get_url(path='@/docs/agent.md') }}">Agent</a>
         </div>
     </div>
 
@@ -49,12 +51,14 @@
     <!-- Pages for hamburger menu -->
     <div class="pages_for_hamburger">
         <a href="{{ get_url(path='@/docs/overview.md') }}">Overview</a>
-        <a href="{{ get_url(path='@/docs/getting-started.md') }}">Gettint Started</a>
         <a href="{{ get_url(path='@/docs/prerequisites.md') }}">Prerequisites</a>
         <a href="{{ get_url(path='@/docs/installation.md') }}">Installation</a>
         <hr />
         <a href="{{ get_url(path='@/docs/c2-server.md') }}">C2 Server</a>
         <a href="{{ get_url(path='@/docs/c2-client.md') }}">C2 Client</a>
+        <a href="{{ get_url(path='@/docs/listener.md') }}">Listener</a>
+        <a href="{{ get_url(path='@/docs/implant.md') }}">Implant</a>
+        <a href="{{ get_url(path='@/docs/agent.md') }}">Agent</a>
     </div>
 </div>
 {% endblock content %}
