--- a/docs/templates/index.html
+++ b/docs/templates/index.html
@@ -10,7 +10,7 @@
         <img src="/hermit.png" alt="hermit">
     </div>
     <div class="quick-links">
-        <a href="/docs/getting-started">Getting Started</a>
+        <a href="/docs/overview">Overview</a>
         <a href="/docs/installation">Installation</a>
     </div>
 </div>
