--- a/docs/sass/style.scss
+++ b/docs/sass/style.scss
@@ -73,7 +73,7 @@ pre {
     margin: 16px auto;
     max-width: calc(100vw - 60px);
     overflow-x: auto;
-    padding: 12px;
+    padding: 18px 12px;
     background-color: var(--color-black)!important;
     
     code {
@@ -98,6 +98,15 @@ ul li code, p code {
     background-color: var(--color-black);
     font-size: 1.2em;
     color: var(--color-red);
+}
+
+table {
+    border-collapse: collapse;
+
+    th,td {
+        border: 1px solid var(--color-light);
+        padding: 10px;
+    }
 }
 
 header {
