--- a/docs/templates/base.html
+++ b/docs/templates/base.html
@@ -27,8 +27,8 @@
                 Hermit C2
             </a>
             <nav>
-                <!-- <a href="/about">About</a> -->
                 <a href="/docs/overview">Docs</a>
+                <a href="/docs/tutorial">Tutorial</a>
                 <a
                     href="https://github.com/hideckies/hermit"
                     target="_blank"
