--- a/docs/templates/doc.html
+++ b/docs/templates/doc.html
@@ -5,8 +5,8 @@
     <div class="pages">
         <div class="wrapper">
             <a href="{{ get_url(path='@/docs/overview.md') }}">Overview</a>
-            <a href="{{ get_url(path='@/docs/prerequisites.md') }}">Prerequisites</a>
             <a href="{{ get_url(path='@/docs/installation.md') }}">Installation</a>
+            <a href="{{ get_url(path='@/docs/tutorial.md') }}">Tutorial</a>
             <hr />
             <a href="{{ get_url(path='@/docs/c2-server.md') }}">C2 Server</a>
             <a href="{{ get_url(path='@/docs/c2-client.md') }}">C2 Client</a>
@@ -51,8 +51,8 @@
     <!-- Pages for hamburger menu -->
     <div class="pages_for_hamburger">
         <a href="{{ get_url(path='@/docs/overview.md') }}">Overview</a>
-        <a href="{{ get_url(path='@/docs/prerequisites.md') }}">Prerequisites</a>
         <a href="{{ get_url(path='@/docs/installation.md') }}">Installation</a>
+        <a href="{{ get_url(path='@/docs/tutorial.md') }}">Tutorial</a>
         <hr />
         <a href="{{ get_url(path='@/docs/c2-server.md') }}">C2 Server</a>
         <a href="{{ get_url(path='@/docs/c2-client.md') }}">C2 Client</a>
