--- a/docs/templates/index.html
+++ b/docs/templates/index.html
@@ -3,15 +3,20 @@
 {% block content %}
 <div class="home">
     <div class="instruction">
+        <img src="/icon.png" alt="icon" class="icon" />
         <h1>
             Hermit C2
         </h1>
         <p>A post-exploitation, command and control framework.</p>
-        <img src="/hermit.png" alt="hermit">
     </div>
     <div class="quick-links">
         <a href="/docs/overview">Overview</a>
         <a href="/docs/installation">Installation</a>
+    </div>
+    <div class="misc">
+        <p>
+            Developed by <a href="https://twitter.com/hideckies" target="_blank" rel="noopenern oreferrer">hdks</a>
+        </p>
     </div>
 </div>
 {% endblock content %}
