update the output for C2 client

--- a/docs/sass/style.scss
+++ b/docs/sass/style.scss
@@ -22,7 +22,7 @@ $mq-breakpoints: (
 :root {
     // Colors
     --color-white: #ffffff;
-    --color-yellow: #ffff00;
+    --color-yellow: #c7cc6a;
     --color-gray: #1d1d0a;
     --color-black: #020200;
 
